--- a/assets/01-html/09-forms/07-option_element.html
+++ b/assets/01-html/09-forms/07-option_element.html
@@ -43,10 +43,15 @@
 				<code>&lt;option&gt;</code> 요소의 label 속성은 해당 옵션의 레이블(label)을 명시합니다.<br>
 				만약 label 속성이 명시되지 않는다면, 해당 값은 <code>&lt;option&gt;</code> 요소 내의 텍스트로 자동 설정됩니다.
 			</p>
-			<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.7.option_element_label.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="option element [label]">
+				<textarea readonly="readonly">
+					<select>
+						<option label="Americano">아메리카노</option>
+						<option label="Cafe Latte">카페라테</option>
+						<option label="Cafe Au Lait">카페오레</option>
+						<option label="Espresso">에스프레소 리스트레토</option>
+					</select>
+				</textarea>
 			</div>
 		</article>
 
@@ -75,10 +80,18 @@
 				value 속성값은 폼을 제출할 때 서버로 보내지는 값입니다.<br>
 				만약 value 속성이 명시되지 않는다면, 해당 값은 <code>&lt;option&gt;</code> 요소 내의 텍스트로 자동 설정됩니다.
 			</p>
-			<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.7.option_element_value.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="option element [value]">
+				<textarea readonly="readonly">
+					<form action="/examples/media/action_target.php">
+						<select name="order">
+							<option value="americano">아메리카노</option>
+							<option value="caffe latte">카페라테</option>
+							<option value="cafe au lait">카페오레</option>
+							<option value="espresso">에스프레소</option>
+						</select><br>
+						<input type="submit">
+					</form>
+				</textarea>
 			</div>
 		</article>
 	</section>
