--- a/assets/01-html/09-forms/14-legend_element.html
+++ b/assets/01-html/09-forms/14-legend_element.html
@@ -14,21 +14,21 @@
 
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>legend {</li>
-					<li class="indent">display: block;</li>
-					<li class="indent">padding: 0 2px;</li>
-					<li class="indent">border: none;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="legend element">
+				<textarea readonly="readonly">
+					legend {
+						display: block;
+						padding: 0 2px;
+						border: none;
+					}
+				</textarea>
 			</div>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/09-forms/9.14.legend_element.html">
 		<h3 class="ve_tit">예제</h3>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
