--- a/assets/01-html/09-forms/08-datalist_element.html
+++ b/assets/01-html/09-forms/08-datalist_element.html
@@ -19,19 +19,19 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>datalist {</li>
-					<li class="indent">display: none;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="datalist element">
+				<textarea readonly="readonly">
+					datalist {
+						display: none;
+					}
+				</textarea>
 			</div>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/09-forms/9.8.datalist_element.html">
 		<h3 class="ve_tit">예제</h3>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
