--- a/assets/01-html/09-forms/09-textarea_element.html
+++ b/assets/01-html/09-forms/09-textarea_element.html
@@ -15,7 +15,13 @@
 		</p>
 		<p class="mt_s">
 			HTML5에서는 <code>&lt;textarea&gt;</code> 요소에 다음과 같은 속성들이 추가되었습니다.<br>
-			autofocus, dirname, form, maxlength, placeholder, required, wrap
+			<code>autofocus</code>,
+			<code>dirname</code>,
+			<code>form</code>,
+			<code>maxlength</code>,
+			<code>placeholder</code>,
+			<code>required</code>,
+			<code>wrap</code>
 		</p>
 	</section>
 
@@ -57,10 +63,11 @@
 				<code>&lt;textarea&gt;</code> 요소의 이름을 명시합니다.<br>
 				name 속성은 폼(form)이 제출된 후 서버에서 폼 데이터(form data)를 참조하기 위해 사용되거나, 자바스크립트에서 요소를 참조하기 위해 사용됩니다.
 			</p>
-			<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.9.textarea_element_name.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [name]">
+				<textarea readonly="readonly">
+					&lt;textarea name=&quot;ukform&quot;&gt;&lt;/textarea&gt;
+
+				</textarea>
 			</div>
 		</article>
 
@@ -119,7 +126,7 @@
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_m" data-tit="placeholder">
+			<aside class="browser_support mt_ms" data-tit="placeholder">
 				<ul>
 					<li class="ie">10+</li>
 					<li class="edge">지원</li>
@@ -141,12 +148,17 @@
 				autofocus 속성은 불리언(boolean) 속성입니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다.
 			</p>
-			<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.9.textarea_element_autofocus.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [autofocus]">
+				<textarea readonly="readonly">
+					<!-- html5 -->
+					&lt;textarea autofocus&gt;&lt;/textarea&gt;
+
+					<!-- XHTML -->
+					&lt;textarea autofocus=&quot;autofocus&quot;&gt;&lt;/textarea&gt;
+
+				</textarea>
 			</div>
-			<aside class="browser_support mt_m" data-tit="autofocus">
+			<aside class="browser_support mt_ms" data-tit="autofocus">
 				<ul>
 					<li class="ie">10+</li>
 					<li class="edge">지원</li>
@@ -166,12 +178,13 @@
 				저장할 이름을 명시합니다.<br>
 				dirname 속성값은 언제나 <code>&lt;textarea&gt;</code> 요소의 name 속성값 뒤에 &quot;.dir&quot;를 추가한 값이 됩니다.
 			</p>
-			<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.9.textarea_element_dirname.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [dirname]">
+				<textarea readonly="readonly">
+					&lt;textarea dirname=&quot;intro.dir&quot;&gt;&lt;/textarea&gt;
+
+				</textarea>
 			</div>
-			<aside class="browser_support mt_m" data-tit="dirname">
+			<aside class="browser_support mt_ms" data-tit="dirname">
 				<ul>
 					<li class="ie false">지원안함</li>
 					<li class="edge false">지원안함</li>
@@ -190,12 +203,13 @@
 				해당 <code>&lt;textarea&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시합니다.<br>
 				이 속성값은 같은 문서 내에 위치하는 <code>&lt;form&gt;</code> 요소의 id 값이어야만 합니다.
 			</p>
-			<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.9.textarea_element_form.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [form]">
+				<textarea readonly="readonly">
+					&lt;textarea form=&quot;myForm&quot;&gt;&lt;/textarea&gt;
+
+				</textarea>
 			</div>
-			<aside class="browser_support mt_m" data-tit="form">
+			<aside class="browser_support mt_ms" data-tit="form">
 				<ul>
 					<li class="ie false">지원안함</li>
 					<li class="edge false">지원안함</li>
@@ -218,7 +232,7 @@
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_m" data-tit="maxlength">
+			<aside class="browser_support mt_ms" data-tit="maxlength">
 				<ul>
 					<li class="ie">10+</li>
 					<li class="edge">지원</li>
@@ -234,10 +248,10 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[required] <span class="t_blue">&lt;textarea required&gt;</span></h3>
 			<p class="mt_s">
-				required 속성은 폼 데이터(form data)가 서버로 제출되기 전 텍스트 입력 영역이 반드시 채워져 있어야 함을 명시합니다.
+				<code>required</code> 속성은 폼 데이터(form data)가 서버로 제출되기 전 텍스트 입력 영역이 반드시 채워져 있어야 함을 명시합니다.
 			</p>
 			<p class="mt_s">
-				required 속성은 불리언(boolean) 속성입니다.<br>
+				<code>required</code> 속성은 불리언(boolean) 속성입니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다.
 			</p>
 			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.9.textarea_element_required.html">
@@ -265,10 +279,11 @@
 					</li>
 				</ol>
 			</div>
-			<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.9.textarea_element_wrap.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [wrap]">
+				<textarea readonly="readonly">
+					&lt;textarea wrap=&quot;hard&quot;&gt;&lt;/textarea&gt;
+
+				</textarea>
 			</div>
 		</article>
 	</section>
