--- a/assets/01-html/09-forms/10-output_element.html
+++ b/assets/01-html/09-forms/10-output_element.html
@@ -16,12 +16,12 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="line_code_box line_code_number indent mt_s">
-				<ul>
-					<li>output {</li>
-					<li class="indent">display: inline;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box indent mt_s" data-tit="output element">
+				<textarea readonly="readonly">
+					output {
+						display: inline;
+					}
+				</textarea>
 			</div>
 		</div>
 	</section>
@@ -57,7 +57,7 @@
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/09-forms/9.10.output_element.html">
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
