--- a/assets/01-html/09-forms/11-progress_element.html
+++ b/assets/01-html/09-forms/11-progress_element.html
@@ -41,7 +41,7 @@
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/09-forms/9.11.progress_element.html">
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
