--- a/assets/01-html/11-models/models.html
+++ b/assets/01-html/11-models/models.html
@@ -248,7 +248,7 @@
 
 		<article class="view_editor edit_code mt_l" data-target="html/11-models/11.1.details.html">
 			<h3 class="ve_tit">예제</h3>
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</article>
