--- a/assets/01-html/01-htmlStart/03-html_element.html
+++ b/assets/01-html/01-htmlStart/03-html_element.html
@@ -144,22 +144,7 @@
 				현재 많이 사용하는 방법이며 활용성 면에서도 우수합니다.<br>
 				HTML에 JavaScript에서 이용할 수 있는 데이터(정보)를 저장하는 용도로 사용합니다.
 			</p>
-			<!-- 기본
-			<div class="line_code_box line_code_number mt_ms">
-				<ul>
-					<li>&lt;div id=&quot;me&quot; data-my-name=&quot;Heropy&quot; data-my-age=&quot;851&quot;&gt;Heropy&lt;/div&gt;</li>
-					<li></li>
-					<li>&lt;script&gt;</li>
-					<li class="indent t_999">// dataset.customDataAttributes</li>
-					<li class="indent">const $me = document.getElementById(&apos;me&apos;);</li>
-					<li class="indent">console.log($me.dataset.myName); <i class="t_999">// &quot;Heropy&quot;</i></li>
-					<li class="indent">console.log($me.dataset.myAge); <i class="t_999">// &quot;851&quot;</i></li>
-					<li>&lt;/script&gt;</li>
-				</ul>
-			</div>
-			-->
-			<!-- gist skin 적용 -->
-			<div class="uk_gist_code_box mt_ms" data-tit="[data-*]">
+			<div class="uk_gist_code_box mt_ms" data-tit="[data-*] attribute">
 				<textarea>
 					<div id="me" data-my-name="Heropy" data-my-age="851">Heropy</div>
 
@@ -198,7 +183,7 @@
 				</ol>
 			</div>
 
-			<div class="uk_gist_code_box mt_ms" data-tit="[draggable]">
+			<div class="uk_gist_code_box mt_ms" data-tit="[draggable] attribute">
 				<textarea readonly="readonly">
 					<div draggable="true">
 						The element to drag.
@@ -226,7 +211,7 @@
 				해당요소를 숨깁니다(CSS 기본값 : display:none;).
 			</p>
 
-			<div class="uk_gist_code_box mt_ms" data-tit="[hidden]">
+			<div class="uk_gist_code_box mt_ms" data-tit="[hidden] attribute">
 				<textarea readonly="readonly">
 					<form id="hidden-form" action="/form-action" hidden>
 						숨겨진 양식들..
@@ -259,7 +244,7 @@
 				tabindex="1" 이상의 양수 값은 논리적 흐름을 방해하기 때문에 사용을 추천하지 않습니다.
 			</p>
 
-			<div class="uk_gist_code_box mt_ms" data-tit="[tabindex]">
+			<div class="uk_gist_code_box mt_ms" data-tit="[tabindex] attribute">
 				<textarea readonly="readonly">
 					<h1 tabindex="0">Sign In</h1>
 					<label>Username: <input type="text"></label>
@@ -300,7 +285,7 @@
 				올바른 사용법은 <code>&lt;label contenteditable=&quot;true&quot;&gt;Example Label&lt;/label&gt;</code>입니다.
 			</p>
 
-			<div class="uk_gist_code_box mt_ms" data-tit="[contenteditable]">
+			<div class="uk_gist_code_box mt_ms" data-tit="[contenteditable] attribute">
 				<textarea readonly="readonly">
 					<p contenteditable="true">
 						uxkm.github.io
@@ -351,7 +336,7 @@
 				auto값은 사용자 입력 데이터와 같이 데이터의 방향성을 모르며, 최종적으로 데이터베이스에 저장되는 데이터일 경우에만 사용합니다.
 			</p>
 
-			<div class="uk_gist_code_box mt_ms" data-tit="[dir]">
+			<div class="uk_gist_code_box mt_ms" data-tit="[dir] attribute">
 				<textarea readonly="readonly">
 					<p dir="ltr">
 						uxkm.github.io
