--- a/assets/01-html/04-grouping/03-ol_element.html
+++ b/assets/01-html/04-grouping/03-ol_element.html
@@ -20,7 +20,7 @@
 		<article class="txt_ex indent_max mt_m">
 			<h3 class="ml_mn">[reversed] <span class="t_blue">&lt;ol reversed&gt;</span></h3>
 			<p class="mt_s">항목이 역순으로 지정되도록 지정합니다. html5에서 새로 생성됨.</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="ol element [reversed]">
+			<div class="uk_gist_code_box mt_ms" data-tit="ol element [reversed] attribute">
 				<textarea readonly="readonly">
 					<ol reversed>
 						<li>Coffee</li>
@@ -49,7 +49,7 @@
 				3번부터 번호를 시작하려면 <code>&lt;ol start=&quot;3&quot;&gt;</code> 와 같이 사용할 수 있습니다.<br>
 				이 속성은 HTML4에서 더 이상 사용되지 않지만 HTML5에서 다시 도입되었습니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="ol element [start]">
+			<div class="uk_gist_code_box mt_ms" data-tit="ol element [start] attribute">
 				<textarea readonly="readonly">
 					<ol start="50">
 						<li>Coffee</li>
@@ -76,9 +76,8 @@
 					<li>'I' - 대문자 로마 숫자 Ⅰ,Ⅱ,Ⅲ... 로 표시</li>
 				</ol>
 			</div>
-			<div class="uk_gist_code_box mt_ms" data-tit="ol element [type]">
+			<div class="uk_gist_code_box mt_ms" data-tit="ol element [type] attribute">
 				<textarea readonly="readonly">
-					<!-- type 속성 사용 -->
 					<ol type="a">
 						<li>Coffee</li>
 						<li>Tea</li>
