--- a/assets/01-html/04-grouping/05-li_element.html
+++ b/assets/01-html/04-grouping/05-li_element.html
@@ -36,7 +36,7 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/04-grouping/4.5.li_element/4.5.li_element1.html">
 		<h2 class="ve_tit">기본 문법</h2>
-		<div class="uk_gist_code_box indent mt_ms" data-tit="ol element [type]">
+		<div class="uk_gist_code_box indent mt_ms" data-tit="li element">
 			<textarea readonly="readonly">
 				<p>Apollo astronauts:<p/>
 				<ul>
