--- a/assets/01-html/05-textLevel/01-a_element.html
+++ b/assets/01-html/05-textLevel/01-a_element.html
@@ -16,7 +16,7 @@
 		</p>
 		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="a element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="a element CSS default">
 				<textarea readonly="readonly">
 					a:link, a:visited {
 						color: (internal value);
@@ -123,7 +123,7 @@
 
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[hreflang] <span class="t_blue">&lt;a href=&quot;URL 주소&quot;&gt;</span></h3>
-			<div class="uk_gist_code_box mt_ms" data-tit="a element [hreflang]">
+			<div class="uk_gist_code_box mt_ms" data-tit="a element [hreflang] attribute">
 				<textarea readonly="readonly">
 					<a href="URL 주소" hreflang="언어 코드[ko(한국어), en(영어), zh(중국어), ja(일본어), fr(프랑스어) 등]"></a>
 
@@ -138,7 +138,7 @@
 
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[target] <span class="t_blue">&lt;a target=&quot;속성값&quot;&gt;</span></h3>
-			<div class="uk_gist_code_box mt_ms" data-tit="a element [target]">
+			<div class="uk_gist_code_box mt_ms" data-tit="a element [target] attribute">
 				<textarea readonly="readonly">
 					<a href="URL 주소" target="_blank|_self|_parent|_top"></a>
 
@@ -160,7 +160,7 @@
 
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[type] <span class="t_blue">&lt;a type=&quot;속성값&quot;&gt;</span></h3>
-			<div class="uk_gist_code_box mt_ms" data-tit="a element [type]">
+			<div class="uk_gist_code_box mt_ms" data-tit="a element [type] attribute">
 				<textarea readonly="readonly">
 					<a href="https://uxkm.github.io" type="text/html">UXKM 사이트로 이동!</a>
 
@@ -179,7 +179,7 @@
 
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[rev] <span class="t_blue">&lt;a rev=&quot;속성값&quot;&gt;</span></h3>
-			<div class="uk_gist_code_box mt_ms" data-tit="a element [rev]">
+			<div class="uk_gist_code_box mt_ms" data-tit="a element [rev] attribute">
 				<textarea readonly="readonly">
 					<a href="chapter1.html" rev="toc" rel="next">chapter 1</a>
 
@@ -193,7 +193,7 @@
 
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[download] <span class="t_blue">&lt;a download=&quot;속성값&quot;&gt;</span></h3>
-			<div class="uk_gist_code_box mt_ms" data-tit="a element [download]">
+			<div class="uk_gist_code_box mt_ms" data-tit="a element [download] attribute">
 				<textarea readonly="readonly">
 					<a download="다운로드되는 파일의 새로운 이름을 명시하며, 생략할 수 있음">다운로드</a>
 
