--- a/assets/01-html/05-textLevel/03-i_element.html
+++ b/assets/01-html/05-textLevel/03-i_element.html
@@ -16,7 +16,7 @@
 		</p>
 		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="i element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="i element CSS default">
 				<textarea readonly="readonly">
 					i {
 						font-style: italic;
