--- a/assets/01-html/05-textLevel/04-strong_element.html
+++ b/assets/01-html/05-textLevel/04-strong_element.html
@@ -13,7 +13,7 @@
 		</p>
 		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="strong element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="strong element CSS default">
 				<textarea readonly="readonly">
 					strong {
 						font-weight: bold;
