--- a/assets/01-html/05-textLevel/05-b_element.html
+++ b/assets/01-html/05-textLevel/05-b_element.html
@@ -37,7 +37,7 @@
 		</ol>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="b element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="b element CSS default">
 				<textarea readonly="readonly">
 					b {
 						font-weight: bold;
