--- a/assets/01-html/06-embedded/02-img_element.html
+++ b/assets/01-html/06-embedded/02-img_element.html
@@ -22,7 +22,7 @@
 
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="img element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="img element CSS default">
 				<textarea readonly="readonly">
 					img {
 						display: inline-block;
@@ -94,7 +94,7 @@
 			<ol class="ol_lst mt_s indent">
 				<li>#맵이름 값 : 해시 문자(#)와 함께 사용할 <code>&lt;map&gt;</code> 요소의 name 속성값을 명시합니다.</li>
 			</ol>
-			<div class="uk_gist_code_box mt_ms" data-tit="img element [usemap]" data-ex="img_area">
+			<div class="uk_gist_code_box mt_ms" data-tit="img element [usemap] attribute" data-ex="img_area">
 				<textarea readonly="readonly">
 					<img src="/examples/images/img_imagemap.jpg" alt="진실 혹은 거짓" usemap="#vending" style="width:320px; height:240px" />
 					<map name="vending">
@@ -173,7 +173,7 @@
 
 			<div class="mt_m">
 				<strong class="t_blue weight-600">sizes 기본 문법 :</strong>
-				<div class="uk_gist_code_box indent mt_ms" data-tit="img element [sizes]">
+				<div class="uk_gist_code_box indent mt_ms" data-tit="img element [sizes] attribute">
 					<textarea readonly="readonly">
 						<img srcset="/images/image_960.jpg 960w, /images/people_575.jpg 575w"
 							 sizes="(min-width: 960px) 50vw, (min-width: 575px) 75vw, 100vw"
@@ -188,7 +188,7 @@
 
 			<div class="mt_m">
 				<strong class="t_blue weight-600">미디어 조건 예 :</strong>
-				<div class="uk_gist_code_box indent mt_ms" data-tit="img element [sizes]">
+				<div class="uk_gist_code_box indent mt_ms" data-tit="img element [sizes] attribute">
 					<textarea readonly="readonly">
 						<img srcset="small.png 400w, medium.png 700w, large.png 1000w"
 							 sizes="(min-width: 1000px) 700px"
@@ -211,7 +211,7 @@
 
 			<div class="mt_m">
 				<strong class="t_blue weight-600">미디어 조건 생략 예 :</strong>
-				<div class="uk_gist_code_box indent mt_ms" data-tit="img element [sizes]">
+				<div class="uk_gist_code_box indent mt_ms" data-tit="img element [sizes] attribute">
 					<textarea readonly="readonly">
 						<img srcset="small.png 400w, medium.png 700w, large.png 1000w"
 							 sizes="500px"
@@ -226,7 +226,7 @@
 
 			<div class="mt_m">
 				<strong class="t_blue weight-600">sizes는 없고 width만 있는 경우 예 :</strong>
-				<div class="uk_gist_code_box indent mt_ms" data-tit="img element [sizes]">
+				<div class="uk_gist_code_box indent mt_ms" data-tit="img element [sizes] attribute">
 					<textarea readonly="readonly">
 						<img srcset="small.png 400w, medium.png 700w, large.png 1000w"
 							 width="500"
@@ -251,7 +251,7 @@
 
 			<div class="mt_m">
 				<strong class="t_blue weight-600">혼합하여 사용하는 경우 예 :</strong>
-				<div class="uk_gist_code_box indent mt_ms" data-tit="img element [sizes]">
+				<div class="uk_gist_code_box indent mt_ms" data-tit="img element [sizes] attribute">
 					<textarea readonly="readonly">
 						<img srcset="small.png 400w, medium.png 700w, large.png 1000w"
 							 sizes="(min-width: 701px) 1000px, (min-width: 401px) 700px, 400px"
@@ -292,7 +292,7 @@
 				<code>&lt;img&gt;</code> 요소의 longdesc 속성은 이미지에 대한 alt 속성의 설명이 부족한 경우 longdesc 속성을 제공하여 부가적인 설명을 제공하는 URL을 명시합니다.<br>
 				현재는 접근성 관련하여 이 속성보다는 다른방법으로 대체하는 것을 권장합니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="img element [longdesc]">
+			<div class="uk_gist_code_box mt_ms" data-tit="img element [longdesc] attribute">
 					<textarea readonly="readonly">
 						<header>
 							<h1>The Lady of Shalott</h1>
