--- a/assets/01-html/06-embedded/05-video_element.html
+++ b/assets/01-html/06-embedded/05-video_element.html
@@ -24,7 +24,7 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="video element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="video element CSS default">
 				<textarea readonly="readonly">
 					video {
 						display: inline;
@@ -214,7 +214,7 @@
 
 	<section class="view_editor ex_code mt_ml" data-target="html/06-embedded/6.5.video_element_poster.html">
 		<h3 class="ve_tit">예제 - poster</h3>
-		<div class="uk_gist_code_box indent mt_ms" data-tit="video element [poster]">
+		<div class="uk_gist_code_box indent mt_ms" data-tit="video element [poster] attribute">
 			<textarea readonly="readonly">
 				<video src="videofile.ogg" autoplay poster="posterimage.jpg">
 					브라우저가 동영상을 지원하지 않습니다.
@@ -230,7 +230,7 @@
 
 	<section class="view_editor ex_code mt_ml" data-target="html/06-embedded/6.5.video_element_subtitles.html">
 		<h3 class="ve_tit">예제 - subtitles</h3>
-		<div class="uk_gist_code_box indent mt_ms" data-tit="video element [subtitles]">
+		<div class="uk_gist_code_box indent mt_ms" data-tit="video element [subtitles] attribute">
 			<textarea readonly="readonly">
 				<video src="foo.ogg">
 					<track kind="subtitles" src="foo.en.vtt" srclang="en" label="English">
