--- a/assets/01-html/06-embedded/12-object_element.html
+++ b/assets/01-html/06-embedded/12-object_element.html
@@ -29,7 +29,7 @@
 
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="object element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="object element CSS default">
 				<textarea readonly="readonly">
 					object:focus {
 						outline: none;
@@ -78,7 +78,7 @@
 				<code>&lt;object&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시함합니다.<br>
 				현재는 모든 브라우저에 지원하지 않습니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="object element [form]">
+			<div class="uk_gist_code_box mt_ms" data-tit="object element [form] attribute">
 				<textarea readonly="readonly">
 					<form action="/examples/media/action_target.php" method="get">
 						<object data="/examples/media/sample.mp4" height="180" width="288">
