--- a/assets/01-html/09-forms/01-form_element.html
+++ b/assets/01-html/09-forms/01-form_element.html
@@ -17,7 +17,7 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="form element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="form element CSS default">
 				<textarea readonly="readonly">
 					form {
 						display: block;
@@ -38,7 +38,7 @@
 				이 값은 <code>&lt;button&gt;</code> 또는 <code>&lt;input&gt;</code> 요소의 formaction 속성으로 대체될 수 있습니다.<br>
 				HTML5에서는 더 이상 <code>&lt;form&gt;</code> 요소에 반드시 action 속성을 명시할 필요가 없도록 변경되었습니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="form element [action]">
+			<div class="uk_gist_code_box mt_ms" data-tit="form element [action] attribute">
 				<textarea readonly="readonly">
 					<form action="/examples/media/action_target.php">
 						<label>이름 : <input type="text" name="st_name"></label>
@@ -78,7 +78,7 @@
 					<p>폼 데이터를 HTTP POST 메소드로 전송함. 폼 데이터가 폼의 바디에 포함되어 서버에 전송됨.</p>
 				</li>
 			</ol>
-			<div class="uk_gist_code_box mt_m" data-tit="form element [method]">
+			<div class="uk_gist_code_box mt_m" data-tit="form element [method] attribute">
 				<textarea readonly="readonly">
 					<form action="/examples/media/action_target.php" method="post">
 						<label>이름 : <input type="text" name="st_name"></label>
@@ -97,7 +97,7 @@
 				name 속성은 서버로 제출된 폼 데이터(form data)를 참조하기 위해 사용되거나, 자바스크립트에서 요소를 참조하기 위해 사용됩니다.<br>
 				XHTML에서는 name 속성을 더 이상 지원하지 않으므로, name 속성 대신 전역 속성인 id 속성을 사용해야 합니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="form element [name]">
+			<div class="uk_gist_code_box mt_ms" data-tit="form element [name] attribute">
 				<textarea readonly="readonly">
 					<form action="/examples/media/action_target.php" name="loginform">
 						<label>이름 : <input type="text" name="st_name"></label>
@@ -153,7 +153,7 @@
 					</li>
 				</ol>
 			</div>
-			<div class="uk_gist_code_box mt_m" data-tit="form element [target]">
+			<div class="uk_gist_code_box mt_m" data-tit="form element [target] attribute">
 				<textarea readonly="readonly">
 					<form action="/examples/media/action_target.php" method="get" target="_blank">
 						<label>이름 : <input type="text" name="st_name"></label>
@@ -174,7 +174,7 @@
 				HTML 4.01에서 문자 인코딩 리스트는 공백 문자(space)나 콤마(,) 중 원하는 문자를 사용하여 각각의 인코딩 방식을 구분할 수 있었지만,
 				HTML5에서는 반드시 공백 문자만을 사용하여 구분하도록 변경되었습니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="form element [accept-charset]">
+			<div class="uk_gist_code_box mt_ms" data-tit="form element [accept-charset] attribute">
 				<textarea readonly="readonly">
 					<form action="/examples/media/action_target.php" accept-charset="UTF-8">
 						<label>이름 : <input type="text" name="st_name"></label>
@@ -209,7 +209,7 @@
 					</li>
 				</ol>
 			</div>
-			<div class="uk_gist_code_box mt_m" data-tit="form element [enctype]">
+			<div class="uk_gist_code_box mt_m" data-tit="form element [enctype] attribute">
 				<textarea readonly="readonly">
 					<form action="/home/uploadfiles" method="post" enctype="multipart/form-data">
 						<label>파일명 : <input type="file" name="myfile"></label>
@@ -242,7 +242,7 @@
 					</li>
 				</ol>
 			</div>
-			<div class="uk_gist_code_box mt_m" data-tit="form element [autocomplete]">
+			<div class="uk_gist_code_box mt_m" data-tit="form element [autocomplete] attribute">
 				<textarea readonly="readonly">
 					<form action="/examples/media/action_target.php" autocomplete="off">
 						<label>이름 : <input type="text" name="st_name"></label>
@@ -265,7 +265,7 @@
 				이 속성을 지정하지 않으면 양식 제출 시 양식의 유효성이 검사되며,<br>
 				이 기본 설정은 <code>&lt;button&gt;</code> 또는 <code>&lt;input&gt;</code> 요소의 formnovalidate속성으로 대체 가능합니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="form element [novalidate]">
+			<div class="uk_gist_code_box mt_ms" data-tit="form element [novalidate] attribute">
 				<textarea readonly="readonly">
 					<form action="editor.cgi" method="post">
 						<p><label>Name: <input required name=fn></label></p>
