--- a/assets/01-html/09-forms/03-input_element_part2.html
+++ b/assets/01-html/09-forms/03-input_element_part2.html
@@ -50,7 +50,7 @@
 				name 속성이 없으면 <code>&lt;input&gt;</code>요소는 양식 제출시 서버에 값을 제공할 수 없습니다.<br>
 				현재는 data-* 전역 속성을 많이 사용하고 있습니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="input element [name]">
+			<div class="uk_gist_code_box mt_ms" data-tit="input element [name] attribute">
 				<textarea readonly="readonly">
 					<label for="name">Name</label>
 					<input name="name" id="name">
