--- a/assets/01-html/09-forms/04-button_element.html
+++ b/assets/01-html/09-forms/04-button_element.html
@@ -17,8 +17,8 @@
 		<p class="mt_s">
 			HTML5에서는 <code>&lt;button&gt;</code> 요소에 다음과 같은 속성들이 추가되었습니다.<br>
 			<code>&lt;button&gt;</code> 요소에 추가된 속성과 <code>&lt;input&gt;</code> 요소에 추가된 속성은 동일하게 사용됩니다.<br>
-			autofocus, form, formaction, formenctype, formmethod, formnovalidate, formtarget<br>
-			위의 추가된 속성은 input요소에 사용되는 속성과 동일하기에 자세한 설명은 제외.
+			<code>autofocus</code>, <code>form</code>, <code>formaction</code>, <code>formenctype</code>, <code>formmethod</code>, <code>formnovalidate</code>, <code>formtarget</code><br>
+			위의 추가된 속성은 <code>&lt;input&gt;</code>요소에 사용되는 속성과 동일하기에 자세한 설명은 제외.
 		</p>
 	</section>
 
