--- a/assets/01-html/09-forms/05-select_element.html
+++ b/assets/01-html/09-forms/05-select_element.html
@@ -158,7 +158,7 @@
 				해당 드롭다운 리스트가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시합니다.<br>
 				이 속성값은 같은 문서 내에 위치하는 <code>&lt;form&gt;</code> 요소의 id 값이어야만 합니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="select element [form]">
+			<div class="uk_gist_code_box mt_ms" data-tit="select element [form] attribute">
 				<textarea readonly="readonly">
 					<form action="/examples/media/action_target.php" method="get" id="myForm">
 						<label>주문자 : <input type="text" name="name"></label><br>
@@ -197,7 +197,7 @@
 				XHTML에서는 속성값을 생략할 수 없으므로, 속성명과 속성값을 모두 명시해야만 합니다.<br>
 				<code>&lt;select required=&quot;required&quot;&gt;</code>
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="select element [required]">
+			<div class="uk_gist_code_box mt_ms" data-tit="select element [required] attribute">
 				<textarea readonly="readonly">
 					<select name="order" required>
 						<option value="">선택되지 않음</option>
