--- a/assets/01-html/09-forms/07-option_element.html
+++ b/assets/01-html/09-forms/07-option_element.html
@@ -43,7 +43,7 @@
 				<code>&lt;option&gt;</code> 요소의 label 속성은 해당 옵션의 레이블(label)을 명시합니다.<br>
 				만약 label 속성이 명시되지 않는다면, 해당 값은 <code>&lt;option&gt;</code> 요소 내의 텍스트로 자동 설정됩니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="option element [label]">
+			<div class="uk_gist_code_box mt_ms" data-tit="option element [label] attribute">
 				<textarea readonly="readonly">
 					<select>
 						<option label="Americano">아메리카노</option>
@@ -80,7 +80,7 @@
 				value 속성값은 폼을 제출할 때 서버로 보내지는 값입니다.<br>
 				만약 value 속성이 명시되지 않는다면, 해당 값은 <code>&lt;option&gt;</code> 요소 내의 텍스트로 자동 설정됩니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="option element [value]">
+			<div class="uk_gist_code_box mt_ms" data-tit="option element [value] attribute">
 				<textarea readonly="readonly">
 					<form action="/examples/media/action_target.php">
 						<select name="order">
