--- a/assets/02-css/01-cssStart/01-css_intro.html
+++ b/assets/02-css/01-cssStart/01-css_intro.html
@@ -46,7 +46,11 @@
 		</div>
 
 		<div class="ol_lst indent mt_m">
-			<strong class="t_black font-16">그래서 HTML 코드로 웹 사이트의 뼈대를 만들고, CSS로 웹 사이트를 자신이 원하는 디자인으로 꾸며주고, 웹사이트의 외형이 만들어졌으면 Jvascript로 웹 사이트에 움직임을 줍니다.</strong>
+			<strong class="t_black font-16">
+				그래서 HTML 코드로 웹 사이트의 뼈대를 만들고,
+				CSS로 웹 사이트를 자신이 원하는 디자인으로 꾸며주고,
+				웹사이트의 외형이 만들어졌으면 Jvascript로 웹 사이트에 움직임을 줍니다.
+			</strong>
 			<ol class="indent mt_sm">
 				<li>CSS는 'Cascading Style Sheets'의 약자입니다.</li>
 				<li>CSS(Cascading Style Sheets)는 콘텐츠의 글꼴, 색상, 크기 및 간격을 포함한 웹 페이지의 표현을 설명하기 위한 언어입니다.</li>
