--- a/assets/01-html/04-grouping/10-figure_element.html
+++ b/assets/01-html/04-grouping/10-figure_element.html
@@ -27,9 +27,8 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/04-grouping/4.10.figure_element/4.10.figure_element1.html">
 		<h2 class="ve_tit">이미지 삽입</h2>
-		<div class="uk_gist_code_box indent mt_ms" data-tit="figure element">
+		<div class="uk_gist_code_box indent mt_ms" data-tit="figure element Insert image">
 			<textarea readonly="readonly">
-				<!-- 이미지 삽입 -->
 				<figure>
 					<img src="images/html/img_html_tag_structure.png" alt="html 요소 설명">
 				</figure>
@@ -44,7 +43,7 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/04-grouping/4.10.figure_element/4.10.figure_element2.html">
 		<h2 class="ve_tit">코드 삽입</h2>
-		<div class="uk_gist_code_box indent mt_ms" data-tit="figure element">
+		<div class="uk_gist_code_box indent mt_ms" data-tit="figure element Insert code">
 			<textarea readonly="readonly">
 				<!-- 코드 삽입 -->
 				<figure>
@@ -67,9 +66,8 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/04-grouping/4.10.figure_element/4.10.figure_element3.html">
 		<h2 class="ve_tit">인용문 삽입</h2>
-		<div class="uk_gist_code_box indent mt_ms" data-tit="figure element">
+		<div class="uk_gist_code_box indent mt_ms" data-tit="figure element Insert citation">
 			<textarea readonly="readonly">
-				<!-- 인용문 삽입 -->
 				<figure>
 					<figcaption><cite>Edsger Dijkstra:</cite></figcaption>
 					<blockquote>
@@ -83,9 +81,8 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/04-grouping/4.10.figure_element/4.10.figure_element4.html">
 		<h2 class="ve_tit">중첩</h2>
-		<div class="uk_gist_code_box indent mt_ms" data-tit="figure element">
+		<div class="uk_gist_code_box indent mt_ms" data-tit="figure element nesting">
 			<textarea readonly="readonly">
-				<!-- 중첩 -->
 				<figure>
 					<figcaption>The castle through the ages: 1423, 1858, and 1999 respectively.</figcaption>
 					<figure>
