--- a/assets/01-html/05-textLevel/02-em_element.html
+++ b/assets/01-html/05-textLevel/02-em_element.html
@@ -14,7 +14,7 @@
 		</p>
 		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="em element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="em element CSS default">
 				<textarea readonly="readonly">
 					em {
 						font-style: italic;
@@ -26,7 +26,7 @@
 
 	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.2.em_element.html">
 		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
