--- a/assets/01-html/05-textLevel/06-br_element.html
+++ b/assets/01-html/05-textLevel/06-br_element.html
@@ -17,17 +17,17 @@
 			HTML4에서는 <code>&lt;br&gt;</code> 요소를 닫지 않지만, XHTML에서는 다음과 같이 반드시 태그를 닫아야만 합니다.<br>
 			HTML5에서는 <code>&lt;br&gt;</code> 요소의 종료 태그 닫아도 되고 닫지 않는것 모두 허용합니다.
 		</p>
-		<div class="line_code mt_s">
-			<strong class="t_blue weight-600">ex :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="br element">
+		<div class="view_editor ex_code mt_l">
+			<h3 class="ve_tit">기본 문법 :</h3>
+			<div class="uk_gist_code_box indent mt_ms" data-tit="br element">
 				<textarea readonly="readonly">
-					__ex_line__#b72df8__ html4
+					<!-- xhtml -->
 					<p>
 						UXKM 홈페이지는 강의 목적으로 제작되었으며,<br />
 						공부를 위해 홈페이지에 접속한 모두를 환영합니다.
 					</p>
 
-					__ex_line__#b72df8__ html5
+					<!-- html5 -->
 					<p>
 						UXKM 홈페이지는 강의 목적으로 제작되었으며,<br>
 						공부를 위해 홈페이지에 접속한 모두를 환영합니다.
