--- a/assets/01-html/05-textLevel/08-s_element.html
+++ b/assets/01-html/05-textLevel/08-s_element.html
@@ -16,7 +16,7 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="s element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="s element CSS default">
 				<textarea readonly="readonly">
 					s {
 						text-decoration: line-through;
