--- a/assets/01-html/05-textLevel/10-sub_element.html
+++ b/assets/01-html/05-textLevel/10-sub_element.html
@@ -15,7 +15,7 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="sub element" data-ex="sub">
+			<div class="uk_gist_code_box indent mt_s" data-tit="sub element CSS default" data-ex="sub">
 				<textarea readonly="readonly">
 					.sub {
 						vertical-align: sub;
