--- a/assets/01-html/05-textLevel/20-kbd_element.html
+++ b/assets/01-html/05-textLevel/20-kbd_element.html
@@ -14,7 +14,7 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="kbd element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="kbd element CSS default">
 				<textarea readonly="readonly">
 					kbd {
 						font-family: monospace;
