--- a/assets/01-html/05-textLevel/22-bdo_element.html
+++ b/assets/01-html/05-textLevel/22-bdo_element.html
@@ -14,7 +14,7 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="bdo element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="bdo element CSS default">
 				<textarea readonly="readonly">
 					bdo {
 						unicode-bidi: bidi-override;
