--- a/assets/01-html/06-embedded/03-map_element.html
+++ b/assets/01-html/06-embedded/03-map_element.html
@@ -18,7 +18,7 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="map element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="map element CSS default">
 				<textarea readonly="readonly">
 					map {
 						display: inline;
