--- a/assets/01-html/06-embedded/04-area_element.html
+++ b/assets/01-html/06-embedded/04-area_element.html
@@ -14,7 +14,7 @@
 
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="area element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="area element CSS default">
 				<textarea readonly="readonly">
 					area {
 						display: none;
