--- a/assets/01-html/06-embedded/06-audio_element.html
+++ b/assets/01-html/06-embedded/06-audio_element.html
@@ -15,7 +15,7 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="audio element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="audio element CSS default">
 				<textarea readonly="readonly">
 					audio {
 						display: inline;
