--- a/assets/01-html/06-embedded/08-picture_element.html
+++ b/assets/01-html/06-embedded/08-picture_element.html
@@ -33,7 +33,7 @@
 				사용자 에이전트가 각 <code>&lt;source&gt;</code> 요소에 대해 평가할 미디어 조건(미디어 쿼리와 유사)을 지정합니다.<br>
 				미디어 조건을 만족하지 못하면 해당 <code>&lt;source&gt;</code>요소를 무시합니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="picture element [media]">
+			<div class="uk_gist_code_box mt_ms" data-tit="picture element [media] attribute">
 				<textarea readonly="readonly">
 					<picture>
 						<source srcset="mdn-logo-wide.png" media="(min-width: 600px)">
@@ -49,7 +49,7 @@
 				요소 속성에서 리소스 URL에 대한 MIME 유형을 지정합니다.<br>
 				사용자 에이전트가 지정된 유형을 지원하지 않으면 srcset 요소를 무시합니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="picture element [type]">
+			<div class="uk_gist_code_box mt_ms" data-tit="picture element [type] attribute">
 				<textarea readonly="readonly">
 					<picture>
 						<source srcset="logo-768.png 768w, logo-768-1.5x.png 1.5px">
@@ -66,7 +66,7 @@
 				브라우저가 크기에 따라 사용할 수 있는 이미지를 나타냅니다.<br>
 				높은 DPI의 스크린의 고해상도 영상을 제공하기 위해 사용합니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="picture element [srcset]">
+			<div class="uk_gist_code_box mt_ms" data-tit="picture element [srcset] attribute">
 				<textarea readonly="readonly">
 					<picture>
 						<source srcset="logo.webp" type="image/webp">
