--- a/assets/01-html/08-table/05-thead_element.html
+++ b/assets/01-html/08-table/05-thead_element.html
@@ -22,7 +22,7 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="thead element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="thead element CSS default">
 				<textarea readonly="readonly">
 					thead {
 						display: table-header-group;
