--- a/assets/01-html/08-table/06-tbody_element.html
+++ b/assets/01-html/08-table/06-tbody_element.html
@@ -32,7 +32,7 @@
 
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="tbody element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="tbody element CSS default">
 				<textarea readonly="readonly">
 					tbody {
 						display: table-row-group;
