--- a/assets/01-html/08-table/09-th_element.html
+++ b/assets/01-html/08-table/09-th_element.html
@@ -24,7 +24,7 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="th element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="th element CSS default">
 				<textarea readonly="readonly">
 					th {
 						display: table-cell;
