--- a/assets/01-html/08-table/10-td_element.html
+++ b/assets/01-html/08-table/10-td_element.html
@@ -26,7 +26,7 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="td element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="td element CSS default">
 				<textarea readonly="readonly">
 					td {
 						display: table-cell;
