--- a/assets/01-html/09-forms/02-label_element.html
+++ b/assets/01-html/09-forms/02-label_element.html
@@ -31,7 +31,7 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="label element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="label element CSS default">
 				<textarea readonly="readonly">
 					label {
 						cursor: default;
