--- a/assets/01-html/09-forms/03-input_element_part1.html
+++ b/assets/01-html/09-forms/03-input_element_part1.html
@@ -26,9 +26,11 @@
 			HTML5에서는 <code>&lt;input&gt;</code> 요소의 align 속성을 더 이상 지원하지 않습니다.<br>
 			또한, 일부 새로운 속성이 추가되었으며, type 속성에도 일부 새로운 속성값이 추가되었습니다.<br>
 			HTML5에서는 <code>&lt;input&gt;</code> 요소에 다음과 같은 type 속성값들이 새롭게 추가되었습니다.<br>
-			color, date, datetime-local, email, month, number, range, search, tel, time, url, week
+			<code>color</code>, <code>date</code>, <code>datetime-local</code>, <code>email</code>, <code>month</code>, <code>number</code>, <code>range</code>, <code>search</code>, <code>tel</code>, <code>time</code>, <code>url</code>, <code>week</code><br>
+		</p>
+		<p class="mt_s">
 			HTML에서는 <code>&lt;input&gt;</code> 요소를 닫지 않지만, XHTML에서는 반드시 요소를 닫아야만 합니다.<br>
-			input요소는 전역 속성을 포함합니다.
+			<code>&lt;input&gt;</code>요소는 전역 속성을 포함합니다.
 		</p>
 	</section>
 
