--- a/assets/01-html/09-forms/03-input_element_part3.html
+++ b/assets/01-html/09-forms/03-input_element_part3.html
@@ -304,7 +304,7 @@
 				서버로 보낼 입력 필드의 텍스트 방향성(text directionality)을 저장할 이름을 명시합니다.<br>
 				dirname 속성값은 언제나 <code>&lt;input&gt;</code> 요소의 name 속성값 뒤에 “.dir”를 추가한 값이 됩니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="input element [dirname]">
+			<div class="uk_gist_code_box mt_ms" data-tit="input element [dirname] attribute">
 				<textarea readonly="readonly">
 					<form>
 						<label>이름 : <input type="text" name="st_name" dirname="st_name.dir"></label><br>
@@ -329,7 +329,7 @@
 				해당 <code>&lt;input&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시합니다.<br>
 				이 속성값은 같은 문서 내에 위치하는 <code>&lt;form&gt;</code> 요소의 id 값이어야만 합니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="input element [form]">
+			<div class="uk_gist_code_box mt_ms" data-tit="input element [form] attribute">
 				<textarea readonly="readonly">
 					<form id="myForm">
 						<label>이름 : <input type="text" name="st_name"></label><br>
@@ -356,7 +356,7 @@
 				(단, <code>&lt;input&gt;</code> 요소의 type 속성값이 &quot;submit&quot; 또는 &quot;image&quot;인 경우에만 사용 가능)<br>
 				formaction 속성은 <code>&lt;form&gt;</code> 요소의 action 속성값을 재정의(overriding)합니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="input element [formaction]">
+			<div class="uk_gist_code_box mt_ms" data-tit="input element [formaction] attribute">
 				<textarea readonly="readonly">
 					<form action="/examples/media/action_target.php" method="get">
 						<label>이름 : <input type="text" name="st_name"></label><br>
@@ -403,7 +403,7 @@
 					</li>
 				</ol>
 			</div>
-			<div class="uk_gist_code_box mt_m" data-tit="input element [formenctype]">
+			<div class="uk_gist_code_box mt_m" data-tit="input element [formenctype] attribute">
 				<textarea readonly="readonly">
 					<form action="/home/uploadfiles" method="post">
 						<label>파일명 : <input type="file" name="myfile"></label><br>
@@ -458,7 +458,7 @@
 					</li>
 				</ol>
 			</div>
-			<div class="uk_gist_code_box mt_m" data-tit="input element [formmethod]">
+			<div class="uk_gist_code_box mt_m" data-tit="input element [formmethod] attribute">
 				<textarea readonly="readonly">
 					<form action="/examples/media/action_target.php" method="get">
 						<label>이름 : <input type="text" name="st_name"></label><br>
@@ -491,7 +491,7 @@
 				formnovalidate 속성은 불리언(boolean) 속성입니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="input element [formnovalidate]">
+			<div class="uk_gist_code_box mt_ms" data-tit="input element [formnovalidate] attribute">
 				<textarea readonly="readonly">
 					<form action="/examples/media/action_target.php" method="get">
 						<label>이메일 주소 : <input type="email" name="user-email"></label><br>
@@ -517,7 +517,7 @@
 				폼 데이터(form data)가 서버로 제출된 후 받는 응답(response) 데이터를 어디에 표시할 지를 명시합니다.<br>
 				(단, <code>&lt;input&gt;</code> 요소의 type 속성값이 &quot;submit&quot; 또는 &quot;image&quot;인 경우에만 사용 가능)
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="input element [formtarget]">
+			<div class="uk_gist_code_box mt_ms" data-tit="input element [formtarget] attribute">
 				<textarea readonly="readonly">
 					<form action="/examples/media/action_target.php" method="get">
 						<label>이름 : <input type="text" name="st_name"></label><br>
