--- a/assets/01-html/09-forms/08-datalist_element.html
+++ b/assets/01-html/09-forms/08-datalist_element.html
@@ -19,7 +19,7 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="datalist element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="datalist element CSS default">
 				<textarea readonly="readonly">
 					datalist {
 						display: none;
