--- a/assets/01-html/09-forms/09-textarea_element.html
+++ b/assets/01-html/09-forms/09-textarea_element.html
@@ -63,7 +63,7 @@
 				<code>&lt;textarea&gt;</code> 요소의 이름을 명시합니다.<br>
 				name 속성은 폼(form)이 제출된 후 서버에서 폼 데이터(form data)를 참조하기 위해 사용되거나, 자바스크립트에서 요소를 참조하기 위해 사용됩니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [name]">
+			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [name] attribute">
 				<textarea readonly="readonly">
 					&lt;textarea name=&quot;ukform&quot;&gt;&lt;/textarea&gt;
 
@@ -148,7 +148,7 @@
 				autofocus 속성은 불리언(boolean) 속성입니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [autofocus]">
+			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [autofocus] attribute">
 				<textarea readonly="readonly">
 					<!-- html5 -->
 					&lt;textarea autofocus&gt;&lt;/textarea&gt;
@@ -178,7 +178,7 @@
 				저장할 이름을 명시합니다.<br>
 				dirname 속성값은 언제나 <code>&lt;textarea&gt;</code> 요소의 name 속성값 뒤에 &quot;.dir&quot;를 추가한 값이 됩니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [dirname]">
+			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [dirname] attribute">
 				<textarea readonly="readonly">
 					&lt;textarea dirname=&quot;intro.dir&quot;&gt;&lt;/textarea&gt;
 
@@ -203,7 +203,7 @@
 				해당 <code>&lt;textarea&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시합니다.<br>
 				이 속성값은 같은 문서 내에 위치하는 <code>&lt;form&gt;</code> 요소의 id 값이어야만 합니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [form]">
+			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [form] attribute">
 				<textarea readonly="readonly">
 					&lt;textarea form=&quot;myForm&quot;&gt;&lt;/textarea&gt;
 
@@ -279,7 +279,7 @@
 					</li>
 				</ol>
 			</div>
-			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [wrap]">
+			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [wrap] attribute">
 				<textarea readonly="readonly">
 					&lt;textarea wrap=&quot;hard&quot;&gt;&lt;/textarea&gt;
 
