--- a/assets/01-html/09-forms/13-fieldset_element.html
+++ b/assets/01-html/09-forms/13-fieldset_element.html
@@ -17,7 +17,7 @@
 		</p>
 		<div class="line_code mt_m">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
-			<div class="uk_gist_code_box indent mt_s" data-tit="fieldset element">
+			<div class="uk_gist_code_box indent mt_s" data-tit="fieldset element CSS default">
 				<textarea readonly="readonly">
 					fieldset {
 						display: block;
@@ -77,7 +77,7 @@
 				이 속성값은 반드시 같은 문서 내에 존재하는<br>
 				요소의 id 속성값이어야 합니다.
 			</p>
-			<div class="uk_gist_code_box mt_ms" data-tit="fieldset element [form]">
+			<div class="uk_gist_code_box mt_ms" data-tit="fieldset element [form] attribute">
 				<textarea readonly="readonly">
 					<fieldset form="loginForm">
 						<legend>학사 관리 로그인</legend>
